@@ -270,10 +270,12 @@ The sift and expunge operations can produce output dumps that are
 invalid.  The problem is copyfrom operations (Subversion branch and
 tag creations).  If an included revision includes a copyfrom reference
 to an excluded one, the reference target won't be in the emitted dump;
-it won't load correctly in either Subversion or reposurgeon. The
-revision number in a copyfrom header pointing to a missing revision
-will be zero. Attempts to be clever about this won't work; the problem
-is inherent in the data model of Subversion.
+it won't load correctly in Subversion, and while reposurgeon has
+fallback logic that backs down to the latest existing revisioon before
+the kissing one this expedient is fragile. The revision number in a
+copyfrom header pointing to a missing revision will be zero. Attempts
+to be clever about this won't work; the problem is inherent in the
+data model of Subversion.
 
 [[author]]
 == AUTHOR ==
