@@ -2,7 +2,8 @@
 
 Reposutory head::
      Added swapsvn subcommand to repocutter.
-     Don't screw up non-ASCII UTF-8 characters in pathnames
+     Don't screw up non-ASCII UTF-8 characters in pathnames.
+     Node-parsing phase patches up missing copy sources.
 
 4.28: 2021-08-07::
      Bug fixes for incremental mirroring, text search by tag name.
